# llrplaps

./: CMakeLists.txt  LICENSE  README.md  build3rdparty.cmd  build3rdparty.sh
src/: CMakeLists.txt  creader.cpp  creader.h  ctaginfo.h  exceptions.cpp  exceptions.h  mainwindow.cpp  mainwindow.h
